# dis_dfcpp

./: .gitmodules  CMakeLists.txt  README.md  tags
benchmark/: CMakeLists.txt  binary_tree.cpp  fibo.cpp  graph.cpp  kmean.cpp  linear.cpp  matdot.cpp  matdot_random.cpp  stl_kmean.cpp  wavefront.cpp
benchmark/openmp/: CMakeLists.txt  omp_kmean.cpp
benchmark/tbb/: CMakeLists.txt  binary_tree.cpp  graph.cpp  kmean.cpp  linearchain.cpp  matdot.cpp  matdot_random.cpp  wavefront.cpp
build_liu/: CMakeCache.txt  Makefile  cmake_install.cmake
build_liu/benchmark/: Makefile  binary_tree  cmake_install.cmake  fibo  graph  kmean  linear  matdot  matdot_random  stl_kmean  wavefront
build_liu/benchmark/openmp/: Makefile  cmake_install.cmake  omp_kmean
build_liu/benchmark/tbb/: Makefile  tbb_binary_tree  tbb_graph  tbb_kmean  tbb_linearchain  tbb_matdot  tbb_matdot_random  tbb_wavefront
dagP/: SConstruct
dagP/examples/dfcpp/: Makefile  README.md  useapi  useapi.cpp
dagP/examples/dfcpp/data/: dfcpp_e6_v6.dot  dfcpp_e6_v6.dot.nodemappings  dfcpp_e6_v6_2.dot
dagP/src/common/: dgraph.c  dgraph.h  dgraphDotReader.cpp
dagP/src/dfcpp_dagP_port/: dfcpp_dagP_port.cpp  dfcpp_dagP_port.h
dfcpp/: ConcurrentQueue.hpp  DFGraph.hpp  DFV.hpp  DynamicTask.hpp  EventCount.hpp  Executor.hpp  Graph.hpp  Hoard.hpp  JsonTran.hpp  JsonTran_back.cc  Node.hpp  NumaNum.hpp  Task.hpp  TaskQueue.hpp  Topology.hpp  Worker.hpp  dfcpp.hpp  dfrt.h  executor.hpp  executor_v2.hpp  global.hpp  global_v2.hpp  master.hpp  master1.hpp  schedule.hpp  schedule_v2.hpp  schedule_v2.hpp.gch  test  test.cpp  types.hpp
docs/: README.en.md  接口.md
examples/: CMakeLists.txt  HoardTest.cpp  executor_w_master.cpp  executor_w_master1.cpp  log.txt  loopback.cpp  main1.cpp  main10.cpp  main2.cpp  main3.cpp  main7.cpp  main8.cpp  main_grpc.cpp  main_grpc_threemess.cpp  main_grpc_threemess1.cpp  main_grpc_threemess2.cpp  main_grpc_threemess3.cpp  main_grpc_thressmess.cpp
examples/dis_example/: CMakeLists.txt
examples/dis_example/executor/: '  CMakeLists.txt  exe.cpp  exe1.cpp  exe2.cpp  main_grpc_threemess.cpp  main_grpc_threemess2.cpp  main_grpc_threemess3.cpp  test_empty.cpp  test_empty1.cpp  valjson_executor.cpp
examples/dis_example/executor/benchmark/: '  CMakeLists.txt  binary_tree.cpp  binary_tree_json.cpp  create_binary_tree  create_binary_tree.cpp  create_linear.cpp  create_wavefront  create_wavefront.cpp  linear.cpp  linear1.cpp  linear_auto_graph.cpp  linear_json.cpp  wave.dot  wavefront.cpp  wavefront_json.cpp
examples/dis_example/master/: CMakeLists.txt  dfcpp_e6_v6_5.dot  linear_master.cpp  master.cpp  master_nojson.cpp  master_test_empty_parti.cpp  valjson.cpp
examples/graph_partition/: Makefile  README.md  useapi.cpp
examples/origin_example/: CMakeLists.txt  fibonacci.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main9.cpp
graph_partition/dfcpp_dagP_port/: dfcpp_dagP_port.cpp  dfcpp_dagP_port.h
grpc_dfcpp/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cc  cmake_install.cmake  commu.grpc.pb.cc  commu.grpc.pb.h  commu.pb.cc  commu.pb.h  commu.proto  master_try1.cc  schedule.cc  schedule.hpp  send_client.cc  send_client1.cc  send_client_jinke.cc  send_server.cc  send_server1.cc
grpc_dfcpp/any_proto/: CMakeLists.txt  any.grpc.pb.cc  any.grpc.pb.h  any.pb.cc  any.pb.h  any.proto  build.sh  send_client.cc  send_server.cc
grpc_dfcpp/benchmark/: Makefile  binary_tree  cmake_install.cmake  fibo  graph  kmean  linear  matdot  matdot_random  stl_kmean  wavefront
grpc_dfcpp/benchmark/openmp/: Makefile  omp_kmean
grpc_dfcpp/benchmark/tbb/: Makefile  cmake_install.cmake  tbb_binary_tree  tbb_graph  tbb_kmean  tbb_linearchain  tbb_matdot  tbb_matdot_random  tbb_wavefront
